--- a/TFGMM/Assets/Photon/PhotonBolt/project.json
+++ b/TFGMM/Assets/Photon/PhotonBolt/project.json
@@ -756,19 +756,6 @@
           "AssetSettings": {
             "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
           }
-        },
-        {
-          "Name": "teamRed",
-          "Enabled": true,
-          "Expanded": true,
-          "ReplicationMode": 1,
-          "Priority": 1,
-          "PropertyType": {
-            "$type": "Photon.Bolt.Compiler.PropertyTypeBool, bolt.compiler"
-          },
-          "AssetSettings": {
-            "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
-          }
         }
       ],
       "GlobalSenders": 1,
@@ -1265,59 +1252,7 @@
       "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
       "Properties": [
         {
-          "Name": "blueChanceToWin",
-          "Enabled": true,
-          "Expanded": true,
-          "ReplicationMode": 1,
-          "Priority": 1,
-          "PropertyType": {
-            "$type": "Photon.Bolt.Compiler.PropertyTypeFloat, bolt.compiler",
-            "Compression": {
-              "MinValue": -2048,
-              "MaxValue": 2048,
-              "Accuracy": 0.01,
-              "Pack": 100.0,
-              "Read": 0.01,
-              "Shift": 2048.0,
-              "BitsRequired": 19
-            }
-          },
-          "AssetSettings": {
-            "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
-          }
-        },
-        {
-          "Name": "redChanceToWin",
-          "Enabled": true,
-          "Expanded": true,
-          "ReplicationMode": 1,
-          "Priority": 1,
-          "PropertyType": {
-            "$type": "Photon.Bolt.Compiler.PropertyTypeFloat, bolt.compiler",
-            "Compression": {
-              "MinValue": -2048,
-              "MaxValue": 2048,
-              "Accuracy": 0.01,
-              "Pack": 100.0,
-              "Read": 0.01,
-              "Shift": 2048.0,
-              "BitsRequired": 19
-            }
-          },
-          "AssetSettings": {
-            "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
-          }
-        }
-      ],
-      "Name": "sendWinningChances",
-      "Guid": "6211bb54-1309-491a-b861-41d2b008d851",
-      "Groups": []
-    },
-    {
-      "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
-      "Properties": [
-        {
-          "Name": "healedPlayers",
+          "Name": "healedBy",
           "Enabled": true,
           "Expanded": true,
           "ReplicationMode": 1,
@@ -1329,31 +1264,9 @@
           "AssetSettings": {
             "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
           }
-        }
-      ],
-      "Name": "healingDoneEvent",
-      "Guid": "c0a4ec21-80dd-4f91-88b1-e503a2e288bf",
-      "Groups": []
-    },
-    {
-      "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
-      "Properties": [
+        },
         {
           "Name": "nameHealed",
-          "Enabled": true,
-          "Expanded": true,
-          "ReplicationMode": 1,
-          "Priority": 1,
-          "PropertyType": {
-            "$type": "Photon.Bolt.Compiler.PropertyTypeInteger, bolt.compiler",
-            "MaxValue": 255
-          },
-          "AssetSettings": {
-            "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
-          }
-        },
-        {
-          "Name": "healedBy",
           "Enabled": true,
           "Expanded": true,
           "ReplicationMode": 1,
@@ -1368,14 +1281,21 @@
         }
       ],
       "Name": "healPlayerEvent",
-      "Guid": "39dcc0dc-e207-4e0e-8721-4a39f6c22338",
+      "Guid": "3441047a-c03f-4acf-88fe-12bce3eb6cf9",
       "Groups": []
     },
     {
       "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
       "Properties": [],
       "Name": "healingReceivedEvent",
-      "Guid": "9b9162e7-2593-430a-b768-636fa78edafa",
+      "Guid": "996eedf2-cf9b-4172-86c6-c05ffb71d52d",
+      "Groups": []
+    },
+    {
+      "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
+      "Properties": [],
+      "Name": "healingDoneEvent",
+      "Guid": "10b60e2d-6808-4d94-87e0-51cdb51482d5",
       "Groups": []
     }
   ],
